tests/parser_cases/valid/procedure_decl_basic.ob0
MODULE Main;
PROCEDURE PrintTwice(x);
BEGIN
  WriteInt(x);
  WriteInt(x)
END PrintTwice;
BEGIN
  PrintTwice(7)
END Main.
