tests/parser_cases/invalid/procedure_missing_semicolon.ob0
(* INVALID: PROCEDURE header is missing semicolon before BEGIN *)
MODULE Main;
PROCEDURE P(x)
BEGIN
  WriteInt(x)
END P;
BEGIN
END Main.
